--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/detalle-orden-giro-gog/detalle-orden-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/detalle-orden-giro-gog/detalle-orden-giro-gog.component.html
@@ -116,6 +116,14 @@
                             <p><strong>Banco:</strong> Bancolombia</p>
                             <p><strong>Tipo de cuenta:</strong> Corriente</p>
                         </mat-card-content>
+                        <!--
+                            Se puso de forma maquetada para cuando se ajuste el ver detalle (dbenitez)
+                        <mat-card-content align="left">
+                            <p><strong>¿Cuál es el medio de pago para los giros del contrato?:</strong> Cheque de gerencia</p>
+                            <p><strong>Nombre del beneficiario:</strong> David Benítez</p>
+                            <p><strong>Número de identificación del beneficiario:</strong> 1.014.283.501</p>
+                        </mat-card-content>
+                        -->
                     </mat-card>
                 </mat-expansion-panel>
             </mat-accordion>
