--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-datos-ddp-gog/tabla-datos-ddp-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-datos-ddp-gog/tabla-datos-ddp-gog.component.html
@@ -1,40 +1,39 @@
-<div class="table-responsive text-center">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-
+<section class="d-flex justify-content-center table-responsive tabla-gris mt-3em">
+    <table mat-table [dataSource]="dataSource" matSort style="width: 90%">
+  
         <ng-container matColumnDef="uso">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Uso </th>
-            <td mat-cell *matCellDef="let element"> {{element.uso}}</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Uso </th>
+          <td mat-cell *matCellDef="let element; index as i" align="center"> <b>{{element.uso}}</b> </td>
         </ng-container>
-
+  
         <ng-container matColumnDef="aportante">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Aportante </th>
-            <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
-                <div  class="supportElement" *ngFor="let el of element.aportante ; let i = index">
-                        {{el.nombre}}
-                </div>
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="valorUso">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor de Uso </th>
-            <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
-                <div class="supportElement" *ngFor="let el of element.valorUso ; let i = index">
-                        {{el.valor }}
-                </div>
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="saldoActualUso">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo actual de uso </th>
-            <td mat-cell *matCellDef="let element">
-                <div class="supportElement" *ngFor="let el of element.saldoActualUso ; let i = index">
-                    {{el.valor }}
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Aportante </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"  *ngFor="let el of element.aportante ; let i = index">
+                {{el.nombre }}
             </div>
-            </td>
+          </td>
         </ng-container>
-
-
+  
+        <ng-container matColumnDef="valorUso">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Valor de Uso </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"  *ngFor="let el of element.valorUso ; let i = index">
+                {{el.valor }}
+            </div>
+          </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="saldoActualUso">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Saldo actual de uso </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let el of element.saldoActualUso ; let i = index">
+                {{el.valor }}
+            </div>
+          </td>
+        </ng-container>
+    
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-</div>
+</section>
