--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-porcntj-partic-gog/tabla-porcntj-partic-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-porcntj-partic-gog/tabla-porcntj-partic-gog.component.html
@@ -1,38 +1,35 @@
-<div class="table-responsive text-center">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-
+<section class="d-flex justify-content-center table-responsive tabla-gris mt-3em">
+    <table mat-table [dataSource]="dataSource" matSort style="width: 90%">
+  
         <ng-container matColumnDef="drp">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
-            <td mat-cell *matCellDef="let element"> <b>{{element.drp}}</b></td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> DRP </th>
+          <td mat-cell *matCellDef="let element; index as i" align="center"> <b>{{element.drp}}</b> </td>
         </ng-container>
-
+  
         <ng-container matColumnDef="numeroDRP">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
-            <td mat-cell *matCellDef="let element">
-                {{element.numeroDRP}}
-            </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Número DRP </th>
+          <td mat-cell *matCellDef="let element; index as i" align="center"> {{element.numeroDRP}} </td>
         </ng-container>
-
+  
         <ng-container matColumnDef="nombreAportante">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre del aportante </th>
-            <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
-                <div class="supportElement" *ngFor="let el of element.nombreAportante ; let i = index">
-                        {{el.nombre }}
-                </div>
-            </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Nombre del aportante </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"  *ngFor="let el of element.nombreAportante ; let i = index">
+                {{el.nombre }}
+            </div>
+          </td>
         </ng-container>
-
+  
         <ng-container matColumnDef="porcParticipacion">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre del aportante </th>
-            <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
-                <div class="supportElement" *ngFor="let el of element.porcParticipacion ; let i = index">
-                        {{el.numero }}
-                </div>
-            </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Porcentaje de participación </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let el of element.porcParticipacion ; let i = index">
+                {{el.numero }}
+            </div>
+          </td>
         </ng-container>
-
+    
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-</div>
-
+</section>
