lo que faltaba del 5.1.6

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.scss
@@ -7,7 +7,12 @@
   }
 }
 
-.w-tabla-descuentos {
-  width: 32em;
+.w-talble {
+  width: 30em;
+  margin: auto;
+}
+
+.w-table-solicitud {
+  width: 75em;
   margin: auto;
 }
