--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/recursos-comprometidos-pagados/recursos-comprometidos-pagados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/recursos-comprometidos-pagados/recursos-comprometidos-pagados.component.html
@@ -189,7 +189,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
       
-            <div class="table-responsive mb-2em">
+            <div class="table-responsive">
               <table class="mat-table cdk-table mat-sort mat-table-style table-form">
                 <thead>
                   <tr class="mat-header-row cdk-header-row ng-star-inserted">
@@ -265,16 +265,6 @@
         </mat-expansion-panel>
   
       </mat-accordion>
-  
-    </mat-expansion-panel>
-    <mat-expansion-panel class="expansion-style">
-      <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title">
-          Contrato de interventoria A513513
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-  
-      Contrato de interventoria A513513
   
     </mat-expansion-panel>
   </mat-accordion>
