--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/validar-balance/validar-balance.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/validar-balance/validar-balance.component.html
@@ -1,7 +1,7 @@
 <section class="container">
   <div class="text-center">
     <div class="text-right">
-      <a routerLink="./.." mat-button color="primary" class="btn-regresar">
+      <a routerLink="../.." mat-button color="primary" class="btn-regresar">
         <img src="assets/img/icon/regresar.svg" alt="Regresar" />
       </a>
     </div>
@@ -65,10 +65,10 @@
   <a routerLink="verRecursos" mat-raised-button color="accent" class="tabs--btn mx-1em">
     Ver recursos comprometidos y pagados
   </a>
-  <a routerLink="" mat-raised-button color="accent" class="tabs--btn mx-1em">
+  <a routerLink="verEjecucionFinanciera" mat-raised-button color="accent" class="tabs--btn mx-1em">
     Ver ejecución financiera por componente
   </a>
-  <a routerLink="" mat-raised-button color="accent" class="tabs--btn mx-1em">
+  <a routerLink="verTrasladosRecursos" mat-raised-button color="accent" class="tabs--btn mx-1em">
     Ver traslados de recursos
   </a>
 </div>
