--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/validar-requisitos-liquidacion/validar-requisitos-liquidacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/validar-requisitos-liquidacion/validar-requisitos-liquidacion.component.html
@@ -1,6 +1,6 @@
 <section class="container">
   <div class="text-right">
-    <a routerLink="./.." mat-button color="primary" class="btn-regresar">
+    <a routerLink="../../.." mat-button color="primary" class="btn-regresar">
       <img src="assets/img/icon/regresar.svg" alt="Regresar" />
     </a>
   </div>
@@ -85,7 +85,7 @@
           Informe final
           </mat-panel-title>
         </mat-expansion-panel-header>
-        Informe final
+        <app-tabla-informe-final></app-tabla-informe-final>
       </mat-expansion-panel>
     </mat-accordion>
   </div>
