--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/observaciones-informe-final/observaciones-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/observaciones-informe-final/observaciones-informe-final.component.html
@@ -4,8 +4,7 @@
       <div class="row justify-content-center align-items-center" style="width: 100%">
         <div class="pr-1">
           <label class="label-left" for="tieneObservaciones">
-            ¿Tiene observaciones frente a la actualización de la póliza que deban ser tenidas en cuenta en la
-            liquidación?
+            ¿Tiene observaciones frente a el informe final que deban ser tenidas en cuenta en la liquidación?
           </label>
         </div>
         <div>
