--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
@@ -223,7 +223,8 @@
       </mat-card>
       <div class="text-right">
         <button mat-button color="warn" type="button" class="btn-eliminar"
-          (click)="deleteCriterio( i, criterio.get( 'solicitudPagoFaseCriterioId' ).value, criterio.get( 'tipoCriterioCodigo' ).value )">
+                (click)="deleteCriterio( i, criterio.get( 'solicitudPagoFaseCriterioId' ).value, criterio.get( 'tipoCriterioCodigo' ).value )"
+                *ngIf="registroCompletoCriterio === false">
           <img src="assets/img/icon/menos.svg">
           Eliminar criterio
         </button>
