--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
@@ -37,8 +37,8 @@
                         <div class="pr-1">
                             <label class="label-left" for="aplicaDescuento" [ngClass]="{
                                 'color-secondaryColor':
-                                  (formDescuentos.get('aplicaDescuento').invalid && formDescuentos.get('aplicaDescuento').touched) ||
-                                  (formDescuentos.get('aplicaDescuento').invalid && estaEditando)
+                                  (formDescuentos.get('aplicaDescuento')?.invalid && formDescuentos.get('aplicaDescuento').touched) ||
+                                  (formDescuentos.get('aplicaDescuento')?.invalid && estaEditando)
                               }">¿Aplican descuentos?</label>
                         </div>
                         <div class="col">
@@ -53,8 +53,8 @@
                                 alt="este campo es requerido" [matTooltipPosition]="'above'"
                                 matTooltip="Debe ingresar la información en el campo para continuar"
                                 matTooltipClass="info-tooltip" *ngIf="
-                              (formDescuentos.get('aplicaDescuento').invalid && formDescuentos.get('aplicaDescuento').touched) ||
-                              (formDescuentos.get('aplicaDescuento').invalid && estaEditando)
+                              (formDescuentos.get('aplicaDescuento')?.invalid && formDescuentos.get('aplicaDescuento').touched) ||
+                              (formDescuentos.get('aplicaDescuento')?.invalid && estaEditando)
                               " />
                         </span>
                     </div>
@@ -64,8 +64,8 @@
                 <div class="d-flex mt-1em col-md-6" style="margin: 10px auto;">
                     <label class="mr-label" class="label-left" for="numeroDescuentos" [ngClass]="{
                         'color-secondaryColor':
-                          (formDescuentos.get('numeroDescuentos').invalid && formDescuentos.get('numeroDescuentos').touched) ||
-                          (formDescuentos.get('numeroDescuentos').invalid && estaEditando)
+                          (formDescuentos.get('numeroDescuentos')?.invalid && formDescuentos.get('numeroDescuentos').touched) ||
+                          (formDescuentos.get('numeroDescuentos')?.invalid && estaEditando)
                       }"><b>¿Cuántos descuentos se aplican sobre la factura?</b></label>
                     <div class="col d-flex">
                         <mat-form-field class="w-70">
@@ -78,8 +78,8 @@
                             alt="este campo es requerido" [matTooltipPosition]="'above'"
                             matTooltip="Debe ingresar la información en el campo para continuar"
                             matTooltipClass="info-tooltip" *ngIf="
-                          (formDescuentos.get('numeroDescuentos').invalid && formDescuentos.get('numeroDescuentos').touched) ||
-                          (formDescuentos.get('numeroDescuentos').invalid && estaEditando)
+                          (formDescuentos.get('numeroDescuentos')?.invalid && formDescuentos.get('numeroDescuentos').touched) ||
+                          (formDescuentos.get('numeroDescuentos')?.invalid && estaEditando)
                           " />
                     </span>
                 </div>
@@ -89,8 +89,8 @@
                             <div class="pr-1">
                                 <label for="valorAPagarDespues" class="label-left" [ngClass]="{
                                     'color-secondaryColor':
-                                      (formDescuentos.get('valorAPagarDespues').invalid && formDescuentos.get('valorAPagarDespues').touched) ||
-                                      (formDescuentos.get('valorAPagarDespues').invalid && estaEditando)
+                                      (formDescuentos.get('valorAPagarDespues')?.invalid && formDescuentos.get('valorAPagarDespues').touched) ||
+                                      (formDescuentos.get('valorAPagarDespues')?.invalid && estaEditando)
                                   }">Valor a pagar después de descuentos</label>
                             </div>
                             <div class="col d-flex">
@@ -106,8 +106,8 @@
                                     alt="este campo es requerido" [matTooltipPosition]="'above'"
                                     matTooltip="Debe ingresar la información en el campo para continuar"
                                     matTooltipClass="info-tooltip" *ngIf="
-                                  (formDescuentos.get('valorAPagarDespues').invalid && formDescuentos.get('valorAPagarDespues').touched) ||
-                                  (formDescuentos.get('valorAPagarDespues').invalid && estaEditando)
+                                  (formDescuentos.get('valorAPagarDespues')?.invalid && formDescuentos.get('valorAPagarDespues').touched) ||
+                                  (formDescuentos.get('valorAPagarDespues')?.invalid && estaEditando)
                                   " />
                             </span>
                         </div>
@@ -129,8 +129,8 @@
                                             <div class="pr-1">
                                                 <label class="label-left" for="tipoDescuento" [ngClass]="{
                                             'color-secondaryColor':
-                                              (descuento.get('tipoDescuento').invalid && descuento.get('tipoDescuento').touched) ||
-                                              (descuento.get('tipoDescuento').invalid && estaEditando)
+                                              (descuento.get('tipoDescuento')?.invalid && descuento.get('tipoDescuento').touched) ||
+                                              (descuento.get('tipoDescuento')?.invalid && estaEditando)
                                           }">Tipo de descuento</label>
                                             </div>
                                             <div class="col">
@@ -148,8 +148,8 @@
                                                     alt="este campo es requerido" [matTooltipPosition]="'above'"
                                                     matTooltip="Debe ingresar la información en el campo para continuar"
                                                     matTooltipClass="info-tooltip" *ngIf="
-                                              (descuento.get('tipoDescuento').invalid && descuento.get('tipoDescuento').touched) ||
-                                              (descuento.get('tipoDescuento').invalid && estaEditando)
+                                              (descuento.get('tipoDescuento')?.invalid && descuento.get('tipoDescuento').touched) ||
+                                              (descuento.get('tipoDescuento')?.invalid && estaEditando)
                                               " />
                                             </span>
                                         </div>
@@ -162,8 +162,8 @@
                                                 <label class="label-left" for="valorDescuento"
                                                 [ngClass]="{
                                                     'color-secondaryColor':
-                                                      (descuento.get('valorDescuento').invalid && descuento.get('valorDescuento').touched) ||
-                                                      (descuento.get('valorDescuento').invalid && estaEditando)
+                                                      (descuento.get('valorDescuento')?.invalid && descuento.get('valorDescuento').touched) ||
+                                                      (descuento.get('valorDescuento')?.invalid && estaEditando)
                                                   }">
                                                     Valor del descuento
                                                 </label>
@@ -186,8 +186,8 @@
                                                     alt="este campo es requerido" [matTooltipPosition]="'above'"
                                                     matTooltip="Debe ingresar la información en el campo para continuar"
                                                     matTooltipClass="info-tooltip" *ngIf="
-                                              (descuento.get('valorDescuento').invalid && descuento.get('valorDescuento').touched) ||
-                                              (descuento.get('valorDescuento').invalid && estaEditando)
+                                              (descuento.get('valorDescuento')?.invalid && descuento.get('valorDescuento').touched) ||
+                                              (descuento.get('valorDescuento')?.invalid && estaEditando)
                                               " />
                                             </span>
                                         </div>
@@ -195,13 +195,13 @@
                                 </div>
                             </mat-card-content>
                         </mat-card>
-                        <div class="text-right" *ngIf="i === descuentos.length - 1">
+                        <div class="text-right" *ngIf="i === descuentos.length - 1 && descuentos.disabled === false">
                             <button mat-button color="warn" type="button" class="btn-eliminar" (click)="addDescuento()">
                                 <img src="assets/img/icon/mas.svg" alt="agregar">
                                 Agregar otro descuento
                             </button>
                         </div>
-                        <div class="text-right" *ngIf="descuentos.length > 1">
+                        <div class="text-right" *ngIf="descuentos.length > 1 && descuentos.disabled === false">
                             <button mat-button color="warn" type="button" class="btn-eliminar"
                                 (click)="deleteDescuento( i, descuento.get( 'solicitudPagoFaseFacturaDescuentoId' ).value )">
                                 <img src="assets/img/icon/menos.svg">
