--- a/asivamosffie.web/asivamosffie/src/app/_pages/cambiar-contrasena/components/cambiar-contrasena/cambiar-contrasena.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/cambiar-contrasena/components/cambiar-contrasena/cambiar-contrasena.component.html
@@ -37,6 +37,6 @@
             </button>
         </mat-form-field>
         <span class="info-error" *ngIf="validarSiSonIguales()">Lo sentimos, la nueva contraseña y confirmación no coinciden.</span>
-        <button mat-raised-button color="accent" type="submit" [disabled]="!formChangePassword.valid" class="btn-cambiar-pass">Cambiar Contraseña</button>
+        <button mat-raised-button color="accent" type="submit" [disabled]="disabledBtn()" class="btn-cambiar-pass">Cambiar Contraseña</button>
     </form>
 </div>
