--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
@@ -715,7 +715,38 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row" *ngIf="formUsuario.get( 'rol' ).value !== null">
+                    <div class="col-md-7">
+                      <div class="row">
+                        <div class="pr-1">
+                            <label  class="label-left"
+                                    for="tieneGrupo"
+                                    [ngClass]="{'color-secondaryColor': (formUsuario.get('tieneGrupo').invalid && formUsuario.get('tieneGrupo').touched) || formUsuario.get('tieneGrupo').invalid && esRegistroNuevo === false }">
+                                    ¿Pertenece a un grupo?
+                            </label>
+                        </div>
+                        <div>
+                            <mat-radio-group class="radioInput" formControlName="tieneGrupo" required>
+                                <mat-radio-button [value]="true"> Sí </mat-radio-button>
+                                <mat-radio-button [value]="false"> No </mat-radio-button>
+                            </mat-radio-group>
+                            <span class="required-form-group" style="margin-left: 1px">*</span>
+                        </div>
+                        <span class="icon-incompleto">
+                          <img
+                            class="icon-incompleto--img"
+                            src="assets/img/icon/incompleto.svg"
+                            alt="este campo es requerido"
+                            [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip"
+                            *ngIf="( formUsuario.get('tieneGrupo').invalid && formUsuario.get('tieneGrupo').touched) || (formUsuario.get('tieneGrupo').invalid && esRegistroNuevo === false )">
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+
+                <div class="row" *ngIf="formUsuario.get('tieneGrupo').value === true">
                     <div class="col-md-7">
                       <div class="row">
                         <div class="pr-1">
@@ -814,7 +845,7 @@
                       </span>
                     </div>
                   </div>
-              </div>
+                </div>
 
                 <div class="row" *ngIf="formUsuario.get( 'tieneContratos' ).value === true">
                     <div class="col-md-7">
